More sonar remarks